2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings in the
	call to enterprise function.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/configurar_agente.php,
	godmode/massive/massive_edit_modules.php,
	godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components.php,
	include/functions_events.php, include/functions.php,
	include/javascript/pandora_modules.js,
	include/functions_network_components.php,
	include/functions_modules.php, include/constants.php, pandoradb.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: first version of
	disabled unknown events for modules, now it is implemented in
	modules, massive operations and components, but it is necesary in
	local component, policy,  api, cli, pandora server and recond task.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php, include/javascript/pandora.js: fixed code style.
	
	* godmode/massive/massive_edit_modules.php: fixed the javascript
	that showed some rows before to select modules to edit.

2013-08-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.data.postgreSQL.sql, pandoradb.data.oracle.sql,
	pandoradb_data.sql: fixed the id_alert_command for restart the
	agent set 11 (before it was 10).

2013-08-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: fixed the timeout
	for to check packages of pandora update manager.

2013-08-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php: fixed PHP
	warnings.

2013-08-23 Miguel de Dios <miguel.dedios@artica.es>
	